--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,17 +1,14 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #EFF6EE;
+    background-color: #F6F7EB;
 }
 img {
     width: 180px;
     height: 140px;
     border: 2px solid white;
-    border-radius: 50%;
     margin-top: 10px;
 }
 #Name {
-    
-    
     width: 100%;
     text-align: center;
 }
@@ -25,10 +22,6 @@ header {
 article #link{
     text-decoration: none;
     color:black; 
-}
-
-#link:hover{
-    color: #EAC435
 }
 #nav-bar {
     background-color: black;
@@ -59,7 +52,7 @@ article {
     
 }
 
-.blue-heading {
+.orange-heading {
     color: #FF8C42;
     font-weight: bold;
     font-size: 16px;
